# study-coord

./: .dockerignore  .gitignore  .mcp.json  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  fly.toml  litestream.yml  main.py  pyproject.toml  requirements.txt  study-coord.toml
app/: main.py  requirements.txt  study-coord.toml
app/src/: main.py
app/src/api/: supabase.py
docs/: database_schema.md  messages.md  mvvm.md
ref/: nicegui-mvvm-codex.md
src/db/: __init__.py  config.py  sql_cache.py  sqlite.py  study.py
src/models/: __init__.py  adverse_event.py  event.py  patient.py  researcher.py  study.py  visit.py
src/tools/: excel.py  messenger.py  observability.py  tasks.py
src/viewmodels/: EventListViewModel.py  EventViewModel.py  MonitoringListViewModel.py  MonitoringViewModel.py  PatientListViewModel.py  PatientViewModel.py  ProtocolListViewModel.py  ProtocolViewModel.py  ReportViewModel.py  ResearcherListViewModel.py  ResearcherViewModel.py  StudyListViewModel.py  StudyResearcherListViewModel.py  StudyResearcherViewModel.py  StudyViewModel.py  ViewModel.py  VisitListViewModel.py  VisitViewModel.py  __init__.py  patient.py  researcher.py  study.py  view_model.py
src/views/: EventGrid.py  EventPanel.py  PatientPanel.py  ProtocolGrid.py  ProtocolPanel.py  ReportView.py  ResearcherGrid.py  ResearcherView.py  StudyEditor.py  StudyGrid.py  StudyMonitoringGrid.py  StudyMonitoringPanel.py  StudyPanel.py  StudyPatientGrid.py  StudyPatientPanel.py  StudyResearcherGrid.py  StudyResearcherPanel.py  StudyView.py  StudyVisitGrid.py  StudyVisitPanel.py  View.py  main.py  patient_panel.py  researcher.py  study.py  study_editor.py  study_grid.py  study_patient_grid.py  study_researcher_grid.py  view.py
supabase/: pg_schema.sql  study-coord.sql
tests/: test_study_viewmodels.py
(+327 files in other folders)
