[project]
name = "study-coord"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "code-review-graph>=2.3.6",
    "nicegui>=3.14.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pandas-stubs~=3.0.3",
    "psycopg[binary]>=3.3.4",
    "pydantic[email,timezone]>=2.13.4",
    "pytest-asyncio>=1.4.0",
    "python-dotenv>=1.2.2",
    "supabase>=2.31.0",
    "typing-extensions>=4.15.0",
    "xlsxwriter>=3.2.9",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["app", "app/src"]
