[project]
name = "study-coord"
version = "0.1.0"
description = "Study Coordinator"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "nicegui>=3.14.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pandas-stubs~=3.0.3",
    "pydantic[email,timezone]>=2.13.4",
    "pytest-asyncio>=1.4.0",
    "python-dotenv>=1.2.2",
    "starlette>=1.3.1",
    "supabase>=2.31.0",
    "typing-extensions>=4.15.0",
    "xlsxwriter>=3.2.9",
]
